--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 variables:
   CONTAINER_IMAGE: $CI_PROJECT_NAME:$CI_COMMIT_SHORT_SHA
   SERVICE_NAME: bullish-api
+  GIT_SUBMODULE_STRATEGY: recursive
 
 build:
   tags:
