--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "atomicals-js"]
 	path = atomicals-js
-	url = ../atomicals-js.git
+	url = git@gitlab.com:zhirenai/bullish/atomicals-js.git
