--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ variables:
   CONTAINER_IMAGE: $CI_PROJECT_NAME:$CI_COMMIT_SHORT_SHA
   SERVICE_NAME: bullish-api
   GIT_SUBMODULE_STRATEGY: recursive
-  GIT_SSH_COMMAND: ssh -o StrictHostKeyChecking=no
+  # GIT_SSH_COMMAND: ssh -o StrictHostKeyChecking=no
 
 build:
   tags:
